Arrow Keys Stop Working When Mouse Over Outliner #37304

Closed
opened 2013-11-04 04:25:25 +01:00 by Daniel Houghton · 3 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.5
AMD Radeon HD 6490M 256 MB

- Blender version with error, and version that worked ---

2.69 and 2.68

- Short description of error ---

Using arrow keys (LEFT and RIGHT) to frame forward and back works great unless the mouse is hovering over the Outliner panel, and then the functionality stops. A closer look reveals that arrow keys work in the Header Bar of the Outliner, but just not the main area of the Outliner.

This is a problem for beginner Blender users who are attempting to follow a tutorial that expects them to change the frame with the arrow keys. If their mouse is hovering over the wrong part of the interface, they will lose functionality without knowing why.

Further investigation shows no arrow functionality when hovering over the File Browser or User prefs (neither Header nor main area).

There is no functionality when hovering over the channels area of the Dope Sheet; same lack of functionality in the NLA editor. However, the channels area of the Graph Editor does seem to allow arrow keys to frame forward and back.

The Text Editor does not frame forward or back, but this makes sense as those keys move the cursor through the text instead. However, when the Text Editor is in its default state with no text file to navigate it might make sense here to allow frame forward and back when hovering over this area of the screen.

Lastly, the Info Bar shows the same inconsistent lack of behavior as the Outliner.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The default blend file is adequate to reproduce this error. Simple hover the mouse over different panels while tapping LEFT ARROW and RIGHT ARROW to see the inconsistent behavior.

Thank you for taking the time to read through this note!
Daniel

%%%

%%%--- Operating System, Graphics card --- OS X 10.8.5 AMD Radeon HD 6490M 256 MB - Blender version with error, and version that worked --- 2.69 and 2.68 - Short description of error --- Using arrow keys (LEFT and RIGHT) to frame forward and back works great unless the mouse is hovering over the Outliner panel, and then the functionality stops. A closer look reveals that arrow keys work in the Header Bar of the Outliner, but just not the main area of the Outliner. This is a problem for beginner Blender users who are attempting to follow a tutorial that expects them to change the frame with the arrow keys. If their mouse is hovering over the wrong part of the interface, they will lose functionality without knowing why. Further investigation shows no arrow functionality when hovering over the File Browser or User prefs (neither Header nor main area). There is no functionality when hovering over the channels area of the Dope Sheet; same lack of functionality in the NLA editor. However, the channels area of the Graph Editor does seem to allow arrow keys to frame forward and back. The Text Editor does not frame forward or back, but this makes sense as those keys move the cursor through the text instead. However, when the Text Editor is in its default state with no text file to navigate it might make sense here to allow frame forward and back when hovering over this area of the screen. Lastly, the Info Bar shows the same inconsistent lack of behavior as the Outliner. - Steps for others to reproduce the error (preferably based on attached .blend file) --- The default blend file is adequate to reproduce this error. Simple hover the mouse over different panels while tapping LEFT ARROW and RIGHT ARROW to see the inconsistent behavior. Thank you for taking the time to read through this note! Daniel %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed in svn.


I've made the following changes (from the commit log)

Frame change hotkeys now work in the following places:

  1. Outliner - Main region
  2. Action/NLA Editors - Channels Region
  3. Info View - Reports region

Other places identified by the bugreport (but which I've decided to leave alone):

  • Text Editor (when no file open) - The way the keymaps work here means that this can't be done without affecting normal text editing

  • File Browser - What's the point of changing frames when you're about to open/save the file?

  • User Prefs - Is there any real point here either? Also, this is usually shown in a separate window.%%%

%%%Fixed in svn. ------------------------------------- I've made the following changes (from the commit log) Frame change hotkeys now work in the following places: 1) Outliner - Main region 2) Action/NLA Editors - Channels Region 3) Info View - Reports region Other places identified by the bugreport (but which I've decided to leave alone): - Text Editor (when no file open) - The way the keymaps work here means that this can't be done without affecting normal text editing - File Browser - What's the point of changing frames when you're about to open/save the file? - User Prefs - Is there any real point here either? Also, this is usually shown in a separate window.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37304
No description provided.