Bugfix [#37304] Arrow Keys Stop Working When Mouse Over Outliner

Frame change hotkeys now work in the following places:
1) Outliner - Main region
2) Action/NLA Editors - Channels Region
3) Info View - Reports region

Other places identified by the bugreport (but which I've decided to leave
alone):
- Text Editor (when no file open) - The way the keymaps work here means that
this can't be done without affecting normal text editing

- File Browser - What's the point of changing frames when you're about to
open/save the file?

- User Prefs - Is there any real point here either? Also, this is usually shown
in a separate window.